--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="section__text">
           <p class="section__text__p1">Hello I'm</p>
           <h1 class="title">Alexandre Cholat</h1>
-          <p class="section__text__p2">Math, Computer, and Cognitive Sciences</p>
+          <p class="section__text__p2">MIASHS Student</p>
           <div class="btn-container">
             <button class="btn btn-color-2" onclick="window.open('assets/CV Alexandre Cholat.pdf')">
               Download CV
@@ -71,7 +71,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
           <div class="section__pic-container">
-            <img src="./assets/Alexandre22.jpg" 
+            <img src="./assets/profile-pic-2.png" 
             alt="profile picture"
             class="about-pic">
           </div>
@@ -81,17 +81,21 @@
                 <img src="./assets/experience.png" 
                 alt="Experience icon"
                 class="icon">
-                <h3>Experience</h3>
-                <p>Lorem ipsum dolor sit. <br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos tempora at ratione hic alias eum!</p>
+                <h3>Skills</h3>
+                <p>Programming<br>
+                  Languages: English, French, Spanish <br>
+                  Commercial Drone Pilot<br>
+                  Sailing (7000 nm) <br>
+                  First-Aid Certifications</p>
               </div>
               <div class="details-container">
                 <img src="./assets/education.png" 
                 alt="education icon"
                 class="icon">
                 <h3>Education</h3>
-                <p>University of Minnesota PSEO program <br>
-                  UGA Mechanical engineering L1 <br>
-                  UGA MIASHS L1
+                <p>UGA MIASHS L1<br>
+                  UGA Mechanical engineering L1<br>
+                  University of Minnesota PSEO
                 </p>
               </div>
             </div>
