--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Project</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!-- This makes the different website pages -->
             </ul>
@@ -78,15 +78,13 @@
           <div class="about-details-container">
             <div class="about-containers">
               <div class="details-container">
-                <img src="./assets/experience.png" 
+                <img src="./assets/language-png-high-resolution.png" 
                 alt="Experience icon"
                 class="icon">
-                <h3>Skills</h3>
-                <p>Programming<br>
-                  Languages: English, French, Spanish <br>
-                  Commercial Drone Pilot<br>
-                  Sailing (7000 nm) <br>
-                  First-Aid Certifications</p>
+                <h3>Languages</h3>
+                <p>Native French speaker<br>
+                  Native English speaker <br>
+                  Very proficient in Spanish</p>
               </div>
               <div class="details-container">
                 <img src="./assets/education.png" 
@@ -100,7 +98,8 @@
               </div>
             </div>
             <div class="text-container">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus aspernatur, nulla distinctio esse excepturi vel odio veritatis? Molestiae iste autem architecto, quia, voluptatibus praesentium doloribus quod unde atque quasi ipsam esse commodi earum veniam ullam ex corporis molestias ad ducimus accusamus quam quidem, aut consequuntur tempora. Sed consequuntur est molestiae.</p>
+              <p>Welcome to my website. I'm a first year Student at Université Grenoble Alpes, studying Math, Computer Science, and Cognitve Science. I'm also passionate about ski touring and sport climbing, and I co-lead a local Scouts troop with my roommate. <br>
+                Currently based in France, I also spend my summers in Minneapolis, where I work and explore new projects. Check out what I've been working on, and feel free to reach out to me to collaborate!</p>
             </div>
           </div>
         </div>
@@ -122,8 +121,8 @@
                   alt="Experience icon" 
                   class="icon">
                   <div>
-                    <h3>Java</h3>
-                    <p>Experienced</p>
+                    <h3>Programming</h3>
+                    <p>Java, Lisp, Python, R</p>
                   </div>
                 </article>
                 <article>
@@ -131,8 +130,8 @@
                   alt="Experience icon" 
                   class="icon">
                   <div>
-                    <h3>R</h3>
-                    <p>Intermediate</p>
+                    <h3>Drone Pilot</h3>
+                    <p>107 sUAV certification </p>
                   </div>
                 </article>
                 <article>
@@ -140,8 +139,8 @@
                   alt="Experience icon" 
                   class="icon">
                   <div>
-                    <h3>Lisp</h3>
-                    <p>Intermediate</p>
+                    <h3>Yacht Charters</h3>
+                    <p>7000 nm</p>
                   </div>
                 </article>
                 <article>
@@ -149,8 +148,8 @@
                   alt="Experience icon" 
                   class="icon">
                   <div>
-                    <h3>Python</h3>
-                    <p>Experienced</p>
+                    <h3>First-Aid Certifications</h3>
+                    <p>Head-injurys</p>
                   </div>
                 </article>
               </div>
@@ -163,8 +162,8 @@
                   alt="Experience icon" 
                   class="icon">
                   <div>
-                    <h3>Java</h3>
-                    <p>Experienced</p>
+                    <h3>Web Development</h3>
+                    <p>Html, Css, Java Script</p>
                   </div>
                 </article>
                 <article>
@@ -172,8 +171,8 @@
                   alt="Experience icon" 
                   class="icon">
                   <div>
-                    <h3>R</h3>
-                    <p>Intermediate</p>
+                    <h3>Entrepreneurship</h3>
+                    <p>Genleman Moving LLC</p>
                   </div>
                 </article>
               </div>
@@ -195,72 +194,72 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-1.png"
+                  src="./assets/mover-stock-photoSquare.jpg"
                   alt="Project 1"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project One</h2>
+              <h2 class="experience-sub-title project-title">Gentleman Moving</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://www.linkedin.com/in/alexandre-cholat-88a97a1aa/'"
                 >
-                  Github
+                  Website
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href ='./#contact'"
                 >
-                  Live Demo
+                  Estimate
                 </button>
               </div>
             </div>
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-2.png"
+                  src="./assets/sailing-lisbonne-2023_IMG.jpg"
                   alt="Project 2"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Two</h2>
+              <h2 class="experience-sub-title project-title">Adventures</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://www.youtube.com/channel/UC0qXC1bQ7giQ2TzQpUPz-eQ'"
                 >
-                  Github
+                  YouTube
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://www.instagram.com/alexandre.cholat/'"
                 >
-                  Live Demo
+                  Instagram
                 </button>
               </div>
             </div>
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-3.png"
+                  src="./assets/plantes_IMG.jpg"
                   alt="Project 3"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Three</h2>
+              <h2 class="experience-sub-title project-title">Volunteering</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://sites.sgdf.fr/'"
                 >
-                  Github
+                  SGDF
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://unjardinsansfrontieres.wordpress.com/'"
                 >
-                  Live Demo
+                  JSF
                 </button>
               </div>
             </div>
