--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         onclick="location.href='./#projects'"
       />
     </section>
-    <section id="projects">
+    <!-- <section id="projects">
       <p class="section__text__p1">Browse My Personal</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
@@ -371,7 +371,7 @@
         class="icon arrow"
         onclick="location.href='./#contact'"
       />
-    </section>
+    </section> -->
 
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
