pro Projects update

--- a/index.html
+++ b/index.html
@@ -286,20 +286,22 @@
         onclick="location.href='./#projects'"
       />
     </section>
-    <!-- <section id="projects">
-      <p class="section__text__p1">Browse My Personal</p>
+    <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../static/assets/1to1victorian-moving-truck-cinematic.jpg"
+                src="../static/assets/html-css-code-pic.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Gentleman Moving</h2>
+            <h2 class="experience-sub-title project-title">
+              Gentleman Moving LLC
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -318,48 +320,52 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../static/assets/sailing-lisbonne-2023_IMG.jpg"
+                src="../static/assets/palette1_bin-packing-ref-pic.jpg"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Adventures</h2>
+            <h2 class="experience-sub-title project-title">
+              3D Packing Algorithm
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.youtube.com/channel/UC0qXC1bQ7giQ2TzQpUPz-eQ'"
+                onclick="location.href='https://github.com/Alexandre-Cholat/Pallet-Packing-Algorithm/tree/main'"
               >
-                YouTube
+                Github Repo
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.instagram.com/alexandre.cholat/'"
+                onclick="location.href='https://www.linkedin.com/posts/alexandre-cholat-88a97a1aa_ive-just-completed-an-exciting-internship-activity-7209691502057308160-UZxG?utm_source=share&utm_medium=member_desktop'"
               >
-                Instagram
+                Project Details
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../static/assets/plantes_IMG.jpg"
+                src="../static/assets/data-ai-rag-model.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Volunteering</h2>
+            <h2 class="experience-sub-title project-title">
+              Custom AI RAG Sales Assistant
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://sites.sgdf.fr/'"
+                onclick="location.href='../static/assets/CENSORED-Outil de Ventes IA-online.pdf'"
               >
-                SGDF
+                Manuscript
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://unjardinsansfrontieres.wordpress.com/'"
+                onclick="location.href='https://chatgpt.com/g/g-15EzYdEbR-neolait-sales-assistant-v3'"
               >
-                JSF
+                Demo
               </button>
             </div>
           </div>
@@ -371,7 +377,7 @@
         class="icon arrow"
         onclick="location.href='./#contact'"
       />
-    </section> -->
+    </section>
 
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -403,14 +409,13 @@
         </div>
       </div>
     </section>
-    <section id="questions">
+    <!-- <section id="questions">
       <p>Any questions?</p>
 
       <div>
         <label for="user-query"><h1>Shoot me a message:</h1></label><br />
 
         <form id="contact-form">
-          <!-- To simplify the tutorial, the value is static. -->
           <input type="hidden" name="contact_number" value="123456" />
 
           <label for="user_name">Name</label>
@@ -426,7 +431,7 @@
         </form>
       </div>
       <div id="query-response"></div>
-    </section>
+    </section> -->
     <footer>
       <nav>
         <div class="nav-links-container">
