--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="../static/assets/Circle crop profile pic.png"
+          src="../static/assets/valencia-profile-pic-square.jpg"
           alt="Alexandre Cholat profile picture"
         />
       </div>
@@ -81,7 +81,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="../static/assets/italy-profile-pic-linkedin.jpg"
+            src="../static/assets/Circle crop profile pic.png"
             alt="profile picture"
             class="about-pic"
           />
@@ -112,12 +112,17 @@
               Welcome to my website. I'm studying Math, Computer Science, and
               Cognitve Science. I'm working to apply my studies to real-world
               projects through internships and bootstrapped entrepreneurship.
+              Check out what I've been working on, or message me to me to
+              collaborate!
+
+              <br />
+              <br />
               Don't hesitate to reach out to me with any inquiries concerning my
-              Web Development and Digital Marketing services.
-              <br />
-              <br />
-              Check out what I've been working on, and feel free to reach out to
-              me to collaborate!
+              Web Development and Digital Marketing services. Contact me
+              privately to discuss AI solutions like assistants and RAG models,
+              and how they might be developed and implemented into your
+              buisness. Let's figure out how AI can bring efficency to your
+              operations, and provide value to your customers.
             </p>
           </div>
         </div>
