--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href ='https://gentlemanmoving.com/Contact.html'"
+                onclick="location.href ='https://www.instagram.com/gentleman_moving_mpls/'"
               >
-                Estimate
+                Instagram
               </button>
             </div>
           </div>
