--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AC Portfolio</title>
+    <title>Alexandre Cholat</title>
+    <link
+      rel="icon"
+      href="../static/assets/software-pic.png"
+      type="image/x-icon"
+      alt="favicon"
+    />
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="stylesheet" href="/static/mediaquerries.css" />
   </head>
