hero-page small icon removal

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             Contact Info
           </button>
         </div>
-        <div id="socials-containers">
+        <!-- <div id="socials-containers">
           <img
             src="../static/assets/linkedin.png"
             alt="My LinkedIn Profile"
@@ -78,7 +78,7 @@
             class="icon"
             onclick="location.href='https://github.com/Alexandre-Cholat/Alexandre-Cholat/tree/main'"
           />
-        </div>
+        </div> -->
       </div>
     </section>
     <section id="about">
@@ -87,7 +87,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="../static/assets/Circle crop profile pic.png"
+            src="../static/assets/standing-me-pic.jpg"
             alt="profile picture"
             class="about-pic"
           />
