--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('../static/assets/CV Alexandre Cholat.pdf')"
+            onclick="window.open('../static/assets/CV Alexandre Cholat English.pdf')"
           >
             Download CV
           </button>
