projects update - FeedLoop

--- a/index.html
+++ b/index.html
@@ -321,26 +321,26 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../static/assets/html-css-code-pic.png"
+                src="../static/assets/logo-feedloop.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Gentleman Moving LLC
+              Generative AI Feedback Tool
             </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://gentlemanmoving.com'"
+                onclick="location.href='https://feedloopai.netlify.app'"
               >
                 Website
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href ='https://www.instagram.com/gentleman_moving_mpls/'"
+                onclick="location.href ='https://feedloopai.netlify.app/demo'"
               >
-                Instagram
+                Prototype
               </button>
             </div>
           </div>
