CV-stage-mai-2025.pdf

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('../static/assets/Software Engineering Internship 2025 CV Alexandre Cholat English.pdf')"
+            onclick="window.open('../static/assets/CV-stage-mai-2025.pdf')"
           >
             Download CV
           </button>
