feedloop.alexandrecholat.software project link update

--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://feedloopai.netlify.app'"
+                onclick="location.href='https://feedloop.alexandrecholat.software/'"
               >
                 Website
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href ='https://feedloopai.netlify.app/demo'"
+                onclick="location.href ='https://feedloop.alexandrecholat.software/demo'"
               >
                 Prototype
               </button>
