--- a/index.html
+++ b/index.html
@@ -509,7 +509,38 @@
             </div>
           </div>
         </div>
+
+        <div class="project-widget">
+          <div class="project-image">
+            <img
+              src="../static/assets/lighthouse-report-view-snip.png"
+              alt="Freelance Web development"
+            />
+          </div>
+          <div class="project-content">
+            <h3 class="project-name">Freelance Web Development</h3>
+            <p class="project-desc">
+              Optimised client websites for 135% increase in loading performance, implementing responsive design principles and improving UX (Flask, JS, HTML, CSS).
+            </p>
+            <div class="project-actions">
+              <button
+                class="btn btn-color-2"
+                onclick="location.href='https://gentlemanmoving.com/'"
+              >
+                Gentleman Moving LLC
+              </button>
+              
+            </div>
+          </div>
+        </div>
+
+
+
+
+
       </div>
+
+      
 
       <img
         src="../static/assets/arrow.png"
