--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <div class="project-widget">
           <div class="project-image">
             <img
-              src="../static/assets/palette1_bin-packing-ref-pic.jpg"
+              src="../static/assets/software-pic.png"
               alt="Computational Modeling"
             />
           </div>
